--- a/package.json
+++ b/package.json
@@ -2,20 +2,33 @@
   "name": "weather-react",
   "version": "0.1.0",
   "private": true,
+  "main": "index.tsx",
+  "homepage":"https://mrserg123.github.io/",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.6",
+    "@mui/styled-engine-sc": "^5.8.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "ts-loader": "^9.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack serve",
+    "build": "webpack",
+    "build-prod": "webpack --mode=production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +47,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "7.17.0",
+    "@babel/core": "7.17.0",
+    "@babel/preset-react": "7.16.0",
+    "babel-loader": "8.2.0",
+    "gh-pages": "^4.0.0",
+    "html-loader": "^3.1.2",
+    "webpack": "5.70.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "4.7.0"
   }
 }
