--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build-prod": "webpack --mode=production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
